# ton-staking

./: CMakeLists.txt  README.md
staking/: CMakeLists.txt  StakingConfig.cmake
staking/frontend/: bower.json  package-lock.json  package.json
staking/frontend/src/: index.js  tonroutes.js
staking/frontend/src/assets/jss/material-dashboard-react/: customSelectStyle.js
staking/frontend/src/components/API/: api.js
staking/frontend/src/components/Footer/: Footer.js
staking/frontend/src/components/Gram/: index.js
staking/frontend/src/components/GramModal/: gramReceiveModal.js  gramRedeemModal.js  gramStakeModal.js  gramTranferModal.js  modalStyle.js
staking/frontend/src/components/GramWallet/: index.js
staking/frontend/src/components/Loading/: index.js
staking/frontend/src/components/Navbars/: AdminNavbar.js
staking/frontend/src/layouts/: Ton.js
staking/frontend/src/views/TonDashboard/: ChartData.js  TonDashboard.js
staking/frontend/src/views/TonFaq/: TonFaq.js
staking/frontend/src/views/TonKeys/: TonKeys.js
staking/frontend/src/views/TonPerformance/: TonPerformance.js
staking/frontend/src/views/TonPool/: TonPool.js
staking/frontend/src/views/TonStakes/: TonStakes.js
staking/frontend/src/views/TonSubscriptions/: TonSubscriptions.js
staking/frontend/src/views/TonWallet/: TonWallet.js
staking/smartcont/: nominator-code.fc  staking-pool-code.fc
staking/smartcont/auto/: nominator-code.cpp  nominator-code.fif  staking-pool-code.cpp  staking-pool-code.fif
staking/staking/: tonlib-server.cpp  tonpool-cli.cpp
staking/staking-smc-envelope/: Nominator.cpp  Nominator.h  StakingPool.cpp  StakingPool.h  StakingSmartContract.cpp  StakingSmartContract.h  StakingSmartContractCode.cpp  StakingSmartContractCode.h  WalletV3.cpp  WalletV3.h  WalletV3O.cpp  WalletV3O.h
staking/test/: online.cpp  test-pool.cpp
